[package]
name = "okay"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qoi_to_png"
path = "src/bin/qoi_to_png.rs"

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }

[dev-dependencies]
# criterion = "0.3"
qoi = "0.4"

[profile.bench]
# Enabled for flamgraph
# debug = true

# [[bench]]
# name = "bench"
# harness = false
